--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Submissions#index</h1>
-<p>Find me in app/views/submissions/index.html.erb</p>
+<%= @submissions.each do |f| %>
+  <%= f.title %><br>
+  <%= f.content %><br>
+<% end %>
