--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Submissions#new</h1>
-<p>Find me in app/views/submissions/new.html.erb</p>
+<h2>New User</h2>
+<%= form_for @submission do |f| %>
+  <%= render partial: 'form', locals: {f: f} %>
+  <%= f.submit('Create User', class: 'btn btn-inverse') %>
+<% end %>
