--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Submissions#show</h1>
-<p>Find me in app/views/submissions/show.html.erb</p>
+<table>
+  <tr>
+    <th>Title:</th>
+    <td><%= @submission.title %></td>
+  </tr>
+  <tr>
+    <th>Content:</th>
+    <td><%= @submission.content %></td>
+  </tr>
+</table>
