--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,15 +1,23 @@
   <table class="table-condensed">
   <tr>
     <th><%= f.label(:first_name) %></th>
-    <td><%= f.text_field(:first_name) %></td><br>
+    <td><%= f.text_field(:first_name) %></td>
   </tr>
   <tr>
     <th><%= f.label(:last_name) %></th>
-    <td><%= f.text_field(:last_name) %></td><br>
+    <td><%= f.text_field(:last_name) %></td>
   </tr>
   <tr>
       <th><%= f.label(:username) %></th>
       <td><%= f.text_field(:username) %></td><br>
+  </tr>
+   <tr>
+    <th><%= f.label(:password) %></th>
+    <td><%= f.password_field(:password) %></td><br>
+  </tr>
+  <tr>
+      <th><%= f.label(:confirm) %></th>
+      <td><%= f.password_field(:password_confirmation) %></td><br>
   </tr>
  
 </table>
